Fixed header max with and spacing

--- a/packages/components-css/header/_mixin.scss
+++ b/packages/components-css/header/_mixin.scss
@@ -7,7 +7,6 @@
   flex-direction: row;
   justify-content: space-between;
   margin-inline: auto;
-  max-inline-size: var(--nijmegen-header-content-max-inline-size, 100%);
   padding-block-end: var(--nijmegen-header-content-padding-block-end, 0);
   padding-block-start: var(--nijmegen-header-content-padding-block-start, 0);
   padding-inline-end: var(--nijmegen-header-content-padding-inline-end, 0);
